--- a/OthelloPresentation/Dialogs/DrawnDialog.xaml
+++ b/OthelloPresentation/Dialogs/DrawnDialog.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="OthelloPresentation.DrawnDialog"
+﻿<Window x:Class="OthelloPresentation.Dialogs.DrawnDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OthelloPresentation"
+        xmlns:local="clr-namespace:OthelloPresentation.Dialogs"
         mc:Ignorable="d"
         Title="DrawnDialog" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
     <Grid Margin="15">
@@ -18,7 +18,7 @@
 
         <TextBlock Name="lblDrawn" Grid.Column="1" FontSize="36">Game is drawn!</TextBlock>
         <WrapPanel Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
-            <Button IsDefault="True" Name="btnNewGame" Click="btnNewGame_Click" MinWidth="60" Margin="0,0,10,0">_New Game</Button>
+            <Button IsDefault="True" Name="btnNewGame" MinWidth="60" Margin="0,0,10,0">_New Game</Button>
             <Button IsCancel="True" MinWidth="60">_Cancel</Button>
         </WrapPanel>
     </Grid>
