--- a/OthelloPresentation/Dialogs/SetupGameDialog.xaml
+++ b/OthelloPresentation/Dialogs/SetupGameDialog.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="OthelloPresentation.SetupGameDialog"
+﻿<Window x:Class="OthelloPresentation.Dialogs.SetupGameDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OthelloPresentation"
+        xmlns:local="clr-namespace:OthelloPresentation.Dialogs"
         mc:Ignorable="d"
         Title="SetupGameDialog" Height="450" Width="800">
     <Grid>
-        
+
     </Grid>
 </Window>
