--- a/OthelloPresentation/GameWindow.xaml
+++ b/OthelloPresentation/GameWindow.xaml
@@ -6,7 +6,10 @@
         xmlns:local="clr-namespace:OthelloPresentation"
         mc:Ignorable="d"
         Title="GameWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+    <Canvas>
+        <local:GameGrid x:Name="Board" Width="400" Height="400"/>
+
+
+
+    </Canvas>
 </Window>
